added image for the first article, added description to the article, and styled the layout of article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,16 +9,40 @@
   <body>
     <!-- Add your HTML markup here -->
     <head>
-      <h1>WireFrame</h1>
+      <h1>Git</h1>
+      <p>Free,Open Source Distributed Version Control</p>
     </head>
     <main>
-      <p>
-        A website wireframe, also known as a page schematic or screen blueprint,
-        is a visual guide that represents the skeletal framework of a website
-        (<a href="https://en.wikipedia.org/wiki/Website_wireframe"
-          >Wikipedia)</a
-        >
-      </p>
+      <article>
+        <div class="container">
+          <div class="img-container">
+            <img
+              src="./images/mohammad-rahmani-unsplash.jpg"
+              alt=""
+              width="700"
+              height="256"
+            />
+          </div>
+          <div class="description">
+            <h2>What is git</h2>
+            <p>
+              Git is a distributed version control system that tracks code
+              changes and enables collaboration. Created by Linus Torvalds, it
+              stores a project’s history in "commits," snapshots of all files at
+              specific points.<br /><br />
+              Key features include branches, which allow for multiple
+              development lines, and merging, to combine changes. Users can work
+              offline and sync updates with remote repositories (like GitHub)
+              using push and pull commands.
+            </p>
+            <p>
+              <a href="https://en.wikipedia.org/wiki/Git"
+                >For more information</a
+              >
+            </p>
+          </div>
+        </div>
+      </article>
     </main>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
   </body>
