correct misspelling with the for line 23

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,12 +20,12 @@
       <form id="form" class="form">
         <h2>Please choose the size and color of your  T-shirt</h2>
         <div class="form-control">
-          <label for="usarname" >User</label>
+          <label for="username">User</label>
           <input type="text" id="username" name="username" placeholder="Enter Username" minlength="2" required />
         </div>
         <div class="form-control">
           <label for="email" class="email">Email</label>
-          <input type="email" placeholder="Enter your email" pattern="[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*" required />
+          <input type="email" id="email" placeholder="Enter your email" pattern="[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*" required />
         </div>
         <div class="form-control">
           <label for="password">Password</label>
