--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -23,7 +23,7 @@
             <a href="#">Read More</a>
         </article>
         <!-- Article 2 -->
-         <div id="article">
+         <div id="article-2col">
         <article>
             <h2>Why do Developers Need Git?</h2>
             <p>Git helps developers manage code versions, collaborate on projects, and track changes efficiently.</p>
