--- a/index.html
+++ b/index.html
@@ -6,38 +6,43 @@
     <meta name="author" content="Mohammed Aslam">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>About Git</h1>
     </header>
 
-<main>
-        <section class="grid-container">
-            <article class="article">
-                <img class="centered" src="git.avif" alt="Description of Image 1" width = "640" height = "380">
+    <main class="container">
+        <div class="mainContainer"> 
+            <article>
+                <img class="centered" src="git.avif" alt="Git logo">
                 <h2>What is Git?</h2>
                 <p>Git basically takes a picture of what all your files look like at that moment and stores a reference to that snapshot.</p>
-               	<a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target = "_blank">Read more to find out what Git is</a>
+                <button><a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more to find out what Git is</a></button>
             </article>
-            <article class="article">
-                <img src="developer.webp" alt="Description of Image 2" width = "640" height = "380">
-                <h2>Why do developers need Git?</h2>
-                <p>Git is the most commonly used version control system. Git tracks the changes you make to files, so you have a record of what has been done, and you can revert to specific versions should you ever need to.</p>
-                <a href = "https://git-scm.com/about/branching-and-merging" target = "_blank">Read More to find out why developers need Git</a>
-            </article>
-            <article class="article">
-                <img src="gitbranch.webp" alt="Description of Image 3" width = "640" height = "380">
-                <h2>What is a branch in Git?</h2>
-                <p>A branch in Git is simply a lightweight movable pointer to one of these commits. The default branch name in Git is master. As you start making commits, you're given a master branch that points to the last commit you made. Every time you commit, the master branch pointer moves forward automatically.</p>
-                <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target = "_blank">Read more to find out what a branch is</a>
-            </article>
-        </section>
+        </div>
+        <div class="flex-wrapper"> 
+        	<div class="mainContainer1"> 
+            	<article>
+                	<img src="developer.webp" alt="Developer image">
+                	<h2>Why do developers need Git?</h2>
+                	<p>Git is the most commonly used version control system. Git tracks the changes you make to files, so you have a record of what has been done, and you can revert to specific versions should you ever need to.</p>
+                <button><a href="https://git-scm.com/about/branching-and-merging" target="_blank">Read More to find out why developers need Git</a></button>
+            	</article>
+        	</div>
+        	<div class="mainContainer2"> 
+            	<article>
+            	    <img src="gitbranch.webp" alt="Git branch image">
+            	    <h2>What is a branch in Git?</h2>
+            	    <p>A branch in Git is simply a lightweight movable pointer to one of these commits. The default branch name in Git is master. As you start making commits, you're given a master branch that points to the last commit you made. Every time you commit, the master branch pointer moves forward automatically.</p>
+                	<button><a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank">Read more to find out what a branch is</a></button>
+            	</article>
+       	 	</div>
+        </div>
     </main>
-
-
-    <footer>
+    
+    <footer class="footer">
         <p>Mohammed Aslam</p>
     </footer>
 </body>
