--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is Git?</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!-- Page Header -->
@@ -22,21 +24,20 @@
             <p>Git is a version control system that helps track changes to files and enables collaboration.</p>
             <a href="#">Read More</a>
         </article>
-
         <!-- Article 2 -->
-        <div id="article">
-        <article>
-            <h2>Why do Developers Need Git?</h2>
-            <p>Git helps developers manage code versions, collaborate on projects, and track changes efficiently.</p>
-            <a href="#">Read More</a>
-        </article>
-
-        <!-- Article 3 -->
-        <article>
-            <h2>What is a Branch in Git?</h2>
-            <p>A branch in Git is a pointer to a commit, allowing parallel development.</p>
-            <a href="#">Read More</a>
-        </article>
+        <div id="article-2col">
+            <article>
+                <h2>Why do Developers Need Git?</h2>
+                <p>Git helps developers manage code versions, collaborate on projects, and track changes efficiently.
+                </p>
+                <a href="#">Read More</a>
+            </article>
+            <!-- Article 3 -->
+            <article>
+                <h2>What is a Branch in Git?</h2>
+                <p>A branch in Git is a pointer to a commit, allowing parallel development.</p>
+                <a href="#">Read More</a>
+            </article>
         </div>
     </section>
 
@@ -46,4 +47,5 @@
     </footer>
 
 </body>
+
 </html>
