removed all onclick events  and added an anchor intead

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -41,8 +41,7 @@
         version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of
         the code is also a repository that can contain the full history of all changes.
       </p>
-      <button onclick="window.open('https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F', '_blank')">Read
-        More</button>
+      <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read More</a>
     </section>
     <section class="wrapper">
       <article class="article-wrapper">
@@ -64,8 +63,7 @@
           changes were made. If a bug is introduced, Git allows for quick reversion to a previous state, minimizing
           disruption.
         </p>
-        <button onclick="window.open('https://www.coursera.org/articles/what-is-git', '_blank')">Read
-          More</button>
+        <a class="button" href="https://www.coursera.org/articles/what-is-git" target="_blank">Read More</a>
       </article>
 
       <article class="article-wrapper">
@@ -88,8 +86,7 @@
           organizing work clearly. Overall, branches are crucial for effective version control, enabling teams to
           innovate while preserving code integrity.
         </p>
-        <button onclick="window.open('https://www.javatpoint.com/git-branch', '_blank')">Read
-          More</button>
+        <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank">Read More</a>
       </article>
     </section>
   </main>
