--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,11 +9,13 @@
 <body>
     <h1>T-Shirt Order Form</h1>
     <form>
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required minlength="2"><br><br>
-
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+      <label for="username">Username:</label><br>
+      <input type="text" id="username" name="username"><br>
+      <label for="email">Confirm Your Email:</label>
+      <input type="email" id="email" name="email" required><br><br>
+      <label for="pwd">Password:</label><br>
+      <input type="password" id="pwd" name="pwd">
+      
 
         <label for="color">T-Shirt Color:</label>
         <select id="color" name="color" required>
@@ -36,10 +38,10 @@
             <option value="XXL">XXL</option>
         </select><br><br>
 
-        <label for="delivery-date">Delivery Date:</label>
-        <input type="date" id="delivery-date" name="delivery-date" required 
-               min="25/10/2024" max="26/11/2024" onchange="setDeliveryDateRange(25/10/2024 to 26/11/2024)"><br><br>
-
+        <label>
+            <p>Choose your preferred party date:</p>
+            <input type="date" name="party" min="2024-10-26" max="2024-11-27" />
+          </label>
         <label for="address">Address:</label><br>
         <input type="text" id="address" name="address" required><br><br>
 
