--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -31,6 +31,7 @@
                 <p>A branch in Git is a pointer to a commit, allowing parallel development.</p>
                 <a href="#">Read More</a>
             </article>
+            </body>
     <!-- Footer -->
     <footer>
         <p>© 2024 Amirhossein Aminian</p>
