Replace with username and placeholder

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,12 +15,12 @@
   <main>
   <form>
     <div>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required pattern="[A-Za-z\s]{2,}" title="Please enter at least 2 letters.">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" required pattern="[A-Za-z\s]{2,}" placeholder="Please enter at least 2 letters.">
     </div>
     <div>
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Please enter a valid email address.">
+      <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" placeholder="Please enter a valid email address.">
     </div>
 
     <div>
