Add meta description for form controls project

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta name="description" content="Explore a comprehensive collection of form controls like text inputs, checkboxes, radio buttons, dropdowns, and more, designed to enhance user experience and accessibility." />
+    <meta name="description" content="Explore a variety of form controls, designed for an intuitive user experience. This project showcases interactive elements like text inputs, checkboxes, radio buttons, dropdowns, and more, helping developers create accessible and visually appealing forms." />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
