changed the button color to a darker tone for a better contrast.

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
+  <meta name="description" content="A user-friendly form page to select t-shirt options, including color, size, and delivery date. All fields are required for a complete order." />
+
 </head>
 <body>
   <header>
