--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My form exercise</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
-  <meta name="description" content="A user-friendly form page to select t-shirt options, including color, size, and delivery date. All fields are required for a complete order." />
+  <meta name="description" content="Order your custom t-shirt by choosing size, color, and preferred delivery date. Sign in to personalize your selection and complete your purchase easily.">
+
+
 
 </head>
 <body>
