removed the <br> from section and added the correct tag <p> in each article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -29,13 +29,14 @@
       <p class="overlay">
         By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
         maintained open source project originally developed in 2005 by Linus Torvalds, the famous creator of the Linux
-        operating system kernel.<br><br>
+        operating system kernel.</p>
 
+      <p class="overlay">
         A staggering number of software projects rely on Git for version control, including commercial projects as well
         as open source. Developers who have worked with Git are well represented in the pool of available software
         development talent and it works well on a wide range of operating systems and IDEs (Integrated Development
-        Environments).<br><br>
-
+        Environments).</p>
+      <p class="overlay">
         Having a distributed architecture, Git is an example of a DVCS (hence Distributed Version Control System).
         Rather than have only one single place for the full version history of the software as is common in once-popular
         version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of
@@ -55,8 +56,9 @@
           coordinating work among multiple team members becomes challenging. Git addresses these issues by allowing
           developers to create branches for their work, enabling them to make changes independently without affecting
           the main codebase. This branching strategy helps avoid conflicts and allows for experimentation with new
-          features.<br><br><br>
-
+          features.
+        </p>
+        <p class="overlay">
           One of the significant advantages of Git is its ability to track changes over time. Each modification made to
           the code is recorded in a commit, which includes a message describing the change. This history enables
           developers to understand the evolution of the project and makes it easy to identify when and why specific
@@ -77,8 +79,9 @@
           letting multiple developers create branches for their tasks without affecting one another’s progress. Each
           branch maintains its own commit history, making it easy to track changes specific to that branch while keeping
           the main branch stable. This structure enhances efficiency, especially in collaborative environments where
-          teams can simultaneously develop new features.<br><br>
-
+          teams can simultaneously develop new features.
+        </p>
+        <p class="overlay">
           Once development on a branch is complete, it can be merged back into the main branch. Git offers robust
           merging tools that facilitate combining changes while addressing any conflicts that arise from simultaneous
           modifications. This ensures cohesive project evolution, integrating contributions from various developers.
