added image, added content to the website, style the website by using flexbox

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -43,6 +43,48 @@
           </div>
         </div>
       </article>
+      <div class="flex-container">
+        <article>
+          <div>
+            <img
+              src="./images/Git-Logo-1788C.jpg"
+              alt="Git logo"
+              width="200px"
+              height="100px"
+            />
+          </div>
+          <div class="description">
+            <h2>Why do developers need Git?
+            </h2>
+            <p>
+              Git provides a distributed, offline-friendly system for tracking
+              code changes and supporting collaboration. Its branching and
+              merging allow parallel development without impacting the main
+              codebase.<br><br> Git’s detailed history simplifies tracking and reverting
+              changes, while integration with platforms like GitHub enhances
+              team workflows, code reviews, and project deployment.
+            </p>
+            <button><a href="https://en.wikipedia.org/wiki/Git">Read more</a></button>
+          </div>
+        </article>
+        <article>
+          <div>
+            <img
+              src="./images/Git-Logo-1788C.jpg"
+              alt="Git logo"
+              width="200px"
+              height="100px"
+            />
+          </div>
+          <div class="description">
+            <h2>What is a branch in Git?
+            </h2>
+            <p>
+             
+            </p>
+          </div>
+        </article>
+      </div>
     </main>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
   </body>
