Centering first article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -17,7 +17,7 @@
 
     <!--Article 1-->
 
-    <article>
+    <article id="article-1">
       <header>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3w5v3NHCaW5Ig1eG2mWbruAG3_rk_4_tJtg&s">
         <h1>What is Git?</h1>
