removed the section hero and updated with article hero

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -21,7 +21,7 @@
     </p>
   </header>
   <main>
-    <section class="hero">
+    <article class="hero">
       <img src="/Wireframe/img/giff.gif" alt="Giff showing how works the git control version" class="img-hero">
       <h2>What is Git</h2>
       <p class="overlay">
@@ -34,6 +34,7 @@
         as open source. Developers who have worked with Git are well represented in the pool of available software
         development talent and it works well on a wide range of operating systems and IDEs (Integrated Development
         Environments).</p>
+
       <p class="overlay">
         Having a distributed architecture, Git is an example of a DVCS (hence Distributed Version Control System).
         Rather than have only one single place for the full version history of the software as is common in once-popular
@@ -41,7 +42,7 @@
         the code is also a repository that can contain the full history of all changes.
       </p>
       <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read More</a>
-    </section>
+    </article>
     <section class="wrapper">
       <article class="article-wrapper">
         <img src="/Wireframe/img/git.jpg" alt="image of git" class="img-article">
