made email more syntaxly correct

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -38,7 +38,7 @@
     </div>
     </main>
     <footer>
-      To learn more about Git from a pro contact Serna Malala @ sm.sernamalala@gmail.com
+      To learn more about Git from a pro contact <a href="mailto:sm.sernamalala@gmail.com">sm.sernamalala@gmail.com</a>
     </footer>
 </body>
 </html>
