--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,4 +1,3 @@
- 
  <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,7 @@
         <form id="product-form">
         <div>
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Your name should be 9-20 characters long">
+        <input type="text" id="name" name="name" placeholder="Please enter your name">
     </div>
     <div>
       <label for="email">Email</label>
@@ -48,21 +47,22 @@
     </select>
     </div>
   
-  
     <div>
-      <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
-      <input type="date" id="delivery-date" required>
-      <p id="error-msg"></p>
-      <p id="success-msg"></p>
+      <label for="date">Select a date (within the next 4 weeks):</label>
+      <input type="date" id="date" name="date" 
+      min="2024-01-11" max="2024-02-08" required> 
     </div>
-    <button id="submit-btn">Submit</button>
-    </main>
   </form>
-
+  
+    <button id="submit-btn">Submit</button>
+   
+  </main>
+  </form>
+  
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+
+    <h2>By Emmanuel</h2>
   </footer>
 </body>
 
