--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,57 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>T-shirt Order Form</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Product Pick</h1>
-  </header>
-  <main>
-  <form>
-    <main>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required pattern=".{2,}" title="Name must be at least 2 characters long">
-  
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-  
-        <label for="color">T-Shirt Color:</label>
-        <select id="color" name="color" required>
-            <option value="">Select a color</option>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-        </select>
-  
-        <label for="size">T-Shirt Size:</label>
-        <select id="size" name="size" required>
-            <option value="">Select Size</option>
-            <option value="xs">XS</option>
-            <option value="s">S</option>
-            <option value="m">M</option>
-            <option value="l">L</option>
-            <option value="xl">XL</option>
-            <option value="xxl">XXL</option>
-        </select>
-  
-        <label for="delivery-date">Delivery Date:</label>
-        <input type="date" id="delivery-date" name="delivery-date" required min="" max="" />
-  
-        <button type="submit">Submit Order</button>
-  
-      </form>
-  
-    </main>
-    <footer>
-      <h2>Haben Solomon Kidane</h2>
-    </footer>
-</body>
+  <div class="form-container">
+    <h2>T-shirt Order Form</h2>
+    <form name="tshirtForm">
+      <label for="name">Customer's Name:</label>
+      <input type="text" id="name" name="name" required minlength="2" pattern="[A-Za-z]+">
+      <div class="error-message">Please enter a valid name </div>
 
+      <label for="email">Customer's Email:</label>
+      <input type="email" id="email" name="email" required>
+      <div class="error-message">Please enter a valid email address.</div>
+
+      <label for="color">T-shirt Color:</label>
+      <select id="color" name="color" required>
+        <option value="" disabled selected>Select a color</option>
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+      </select>
+      <div class="error-message">Please select a T-shirt color.</div>
+
+      <label for="size">T-shirt Size:</label>
+      <select id="size" name="size" required>
+        <option value="" disabled selected>Select a size</option>
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
+      <div class="error-message">Please select a T-shirt size.</div>
+
+      <label for="orderingTime">Ordering Time:</label>
+      <input type="text" id="orderingTime" name="orderingTime" readonly>
+
+      <label for="deliveryTime">Estimated Delivery Time:</label>
+      <input type="text" id="deliveryTime" name="deliveryTime" readonly>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+     
+      const now = new Date();
+      const formattedNow = now.toLocaleString(); 
+      const deliveryDate = new Date();
+      deliveryDate.setDate(now.getDate() + 28);
+      const formattedDelivery = deliveryDate.toLocaleString(); 
+      document.getElementById("orderingTime").value = formattedNow;
+      document.getElementById("deliveryTime").value = formattedDelivery;
+    });
+  </script>
+
+  <footer>
+    <p>&copy; 2024 Haben T-shirt. All rights reserved.</p>
+    <p>Contact us: <a href="mailto:info@HabenT-shirt.com">info@HabenT-shirt.com</a></p>
+  </footer>
+</body>
 </html>
