--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Mohammed Aslam">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
