added information about git branch

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -54,17 +54,18 @@
             />
           </div>
           <div class="description">
-            <h2>Why do developers need Git?
-            </h2>
+            <h2>Why do developers need Git?</h2>
             <p>
               Git provides a distributed, offline-friendly system for tracking
               code changes and supporting collaboration. Its branching and
               merging allow parallel development without impacting the main
-              codebase.<br><br> Git’s detailed history simplifies tracking and reverting
-              changes, while integration with platforms like GitHub enhances
-              team workflows, code reviews, and project deployment.
+              codebase.<br /><br />
+              Git’s detailed history simplifies tracking and reverting changes,
+              while integration with platforms like GitHub enhances team
+              workflows, code reviews, and project deployment.
             </p>
-            <button><a href="https://en.wikipedia.org/wiki/Git">Read more</a></button>
+
+            <a href="https://en.wikipedia.org/wiki/Git">Read more</a>
           </div>
         </article>
         <article>
@@ -77,11 +78,20 @@
             />
           </div>
           <div class="description">
-            <h2>What is a branch in Git?
-            </h2>
+            <h2>What is a branch in Git?</h2>
             <p>
-             
+              Git branch is essentially a pointer to a snapshot of your
+              changes.When working on fixing a bug, or adding a new features,
+              you create a new branch. This allows multiple people to work on
+              different issues without interfering with each other code.<br /><br />
+
+              Git branch also allows for smooth code review and testing via pull
+              request or merge request.
             </p>
+            <a
+              href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes."
+              >Read more</a
+            >
           </div>
         </article>
       </div>
