added a footer to html with content

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -81,8 +81,8 @@
             <h2>What is a branch in Git?</h2>
             <p>
               Git branch is essentially a pointer to a snapshot of your
-              changes.When working on fixing a bug, or adding a new features,
-              you create a new branch. This allows multiple people to work on
+              changes.When working on fixing a bug, or adding a new features, you
+              create a new branch. This allows multiple people to work on
               different issues without interfering with each other code.<br /><br />
 
               Git branch also allows for smooth code review and testing via pull
@@ -96,6 +96,9 @@
         </article>
       </div>
     </main>
+    <footer>
+      For more information please contact mansoor.munawar@hotmail.com
+    </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
   </body>
 </html>
