changed the head tag to header tag and styled the header elements

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <!-- Add your HTML markup here -->
-    <head>
+    <header>
       <h1>Git</h1>
       <p>Free,Open Source Distributed Version Control</p>
-    </head>
+    </header>
     <main>
       <article>
         <div class="container">
@@ -97,7 +97,7 @@
       </div>
     </main>
     <footer>
-      For more information please contact mansoor.munawar@hotmail.com
+      For more information please contact: mansoor.munawar@hotmail.com
     </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
   </body>
