--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,7 +13,7 @@
   </header>
 
   
-      <article id="what-is-git">
+      <article id="article1">
           <h2>What is Git?</h2>
           <p>Git is a distributed version control system that helps developers track changes in their code over time. It is widely used to manage project versions and collaborate with other developers efficiently.</p>
 
@@ -21,7 +21,6 @@
       </article>
 
       <div class="article2-article3">
-      <div>
       <article class="section" id="why-developers-need-git">
           <h2>Why Do Developers Need Git?</h2>
           <ul>
@@ -33,16 +32,14 @@
           </ul>
           <a href="#">Learn More</a>
       </article>
-      </div>
 
-      <div>
       <article class="section" id="what-is-branch">
           <h2>What is a Branch in Git?</h2>
           <p>A branch in Git is a separate workspace within the repository. It allows developers to work on new features, bug fixes, or experiments without affecting the main project. Branches are often merged back into the main project once the work is complete and verified.</p>
           <p><strong>Example:</strong> A developer may create a 'feature' branch to add new functionality, while others may work on separate branches. Once the new feature is ready, it can be merged into the 'main' branch.</p>
+          
           <a href="#">Learn More</a>
       </article>
-      </div>
       </div>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
