Add pattern for Name

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,7 +18,7 @@
       <!-- User Name -->
       <div>
         <label for="user-name">Name:<span aria-label="required">*</span></label>
-        <input type="text" id="user-name" placeholder="Enter your Name" required minlength="2">
+        <input type="text" pattern="[A-Za-z]*" title="Letters only" id="user-name" placeholder="Enter your Name" required minlength="2">
       </div>
       <!-- Email -->
       <div>
