Placeholder for <select> elements

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -26,6 +26,7 @@
     <div>
       <label for="tshirtcolor">Choose the T-Shirt Color</label>
       <select name="T-shirt Color" id="tshirtcolor" required>
+        <option value="" disabled selected hidden>Choose Your Color</option>
         <option value="Red">Red</option>
         <option value="Green">Green</option>
         <option value="Blue">Blue</option>
@@ -34,6 +35,7 @@
     <div>
       <label for="tshirtsize">T-Shirt Size</label>
       <select name="T-shirt Size" id="tshirtsize" required>
+        <option value="" disabled selected hidden>Choose Your T-Shirt Size</option>
         <option value="XS">XS</option>
         <option value="S">S</option>
         <option value="M">M</option>
