I used empty value attribute to select the first option default without being able to select it.

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -27,6 +27,7 @@
         </select>
         <label for="size">Sizes</label>
         <select name="sizes" id="size" required>
+          <option value="">Select size</option>
           <option value="XS">XS</option>
           <option value="S">S</option>
           <option value="M">M</option>
