--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,32 +13,35 @@
       <h1>Product Pick</h1>
     </header>
     <main>
-    <form>
-      <fieldset>
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Enter your name" required>
-        <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Email" required>
-        <label for="color">Color</label>
-        <select name="color" id="color" required>
-          <option value="red">Red</option>
-          <option value="green">Green</option>
-          <option value="light-green">Light Green</option>
-        </select>
-        <label for="size">Sizes</label>
-        <select name="sizes" id="size" required>
-          <option value="">Select size</option>
-          <option value="XS">XS</option>
-          <option value="S">S</option>
-          <option value="M">M</option>
-          <option value="L">L</option>
-          <option value="XL">XL</option>
-          <option value="XXL">XXL</option>
-        </select>
-        <label for="date">Date</label>
-        <input type="date" id="date" min="2024-11-20">
-      </fieldset>
-    </form>
+      <form>
+        <fieldset>
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Enter your name" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Email" required>
+          <label for="color">Color</label>
+          <select name="color" id="color" required>
+            <option value="red">Red</option>
+            <option value="green">Green</option>
+            <option value="light-green">Light Green</option>
+          </select>
+          <label for="size">Sizes</label>
+          <select name="sizes" id="size" required>
+            <option value="">Select size</option>
+            <option value="XS">XS</option>
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+            <option value="XXL">XXL</option>
+          </select>
+          <label for="date">Date</label>
+          <input type="date" id="date" min="2024-11-20">
+        </fieldset>
+      </form>
     </main>
+    <footer>
+      <p>All rights reserved &copy; - Gabriel</p>
+    </footer>
   </body>
 </html>
