--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Product Pick</h1>
+      <h1>Best T-shirts available, book one with us</h1>
     </header>
     <main>
       <form>
@@ -21,6 +21,7 @@
           <input type="email" id="email" placeholder="Email" required>
           <label for="color">Color</label>
           <select name="color" id="color" required>
+            <option value="">Select color</option>
             <option value="red">Red</option>
             <option value="green">Green</option>
             <option value="light-green">Light Green</option>
