update - added requirement for choosing colour

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,7 +32,7 @@
      Colour
      <div>
       <label for="red">Red</label>
-      <input type="radio" name="Colour" id="red">
+      <input type="radio" name="Colour" id="red" required>
      </div>
      <div>
       <label for="green">Green</label>
