I added a button for submitting the information

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -38,6 +38,7 @@
           </select>
           <label for="date">Date</label>
           <input type="date" id="date" min="2024-11-20">
+          <button type="submit">Submit</button>
         </fieldset>
       </form>
     </main>
