--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,37 +10,34 @@
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
     <header>
-      <h1>GIT</h1>
-      <h2>The First Skill For Programmers!</h2>
+      <h1 id="title">GIT</h1>
+      <h2 id="subtitle">The First Skill For Programmers !</h2>
     </header>
-    <main class="container">
 
     <article class="first">
-      <img id="img1" src="images/1.jpg" alt="" width="100%" height="400px" >
-      <h3>What Is Git ?</h3>
+      <img src="images/1.jpg" alt="Git" width="100%" height="420px" >
+      <h1>What Is Git ?</h1>
       <h3>Git is a version control system that tracks changes to files over time. It's a powerful tool that allows developers to collaborate effectively, manage different versions of their projects, and revert to previous states if necessary.</h3>
       <a href="#">READ MORE</a>
     </article>
 
     <article class="second">
-      <img src="images/2.jpg" alt="" width="100%" height="500px">
-      <h3>Why developers need Git:</h3>
+      <img src="images/2.jpg" alt="Git teamwork" width="100%" height="370px">
+      <h1>Why developers need Git:</h1>
       <h3>
-        Version control: Git helps developers track changes to their code over time, making it easy to revert to previous versions if needed.
-        Collaboration: Git allows multiple developers to work on the same project simultaneously, merging their changes and resolving conflicts.
-        Experimentation: Developers can create branches to experiment with new features or bug fixes without affecting the main codebase.
+        Git allows multiple developers to work on the same project simultaneously. making it easy to revert to previous versions if needed.
+        
       </h3>
       <a href="#">READ MORE</a>
     </article>
 
     <article class="third">
-      <img src="images/3.jpg" alt="" width="100%" height="500px">
-      <h3>What is a branch in Git?</h3>
-      <h3>A branch in Git is like a parallel version of a repository. It allows you to work on different features or bug fixes independently without affecting the main codebase. Think of it as creating a separate workspace where you can experiment and make changes without risking the stability of the main project.</h3>
+      <img src="images/3.jpg" alt="Git branch" width="100%" height="370px">
+      <h1>What is a branch in Git?</h1>
+      <h3>A branch in Git is like a parallel version of a repository. It allows you to <br>work on different features or bug fixes independently.</h3>
       <a href="#">READ MORE</a>
       
     </article>
-
 
 
     </main>
