changed the size of the btton radio

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,7 +32,7 @@
           <input type="password" id="password" placeholder="Enter Password" required />
         </div>
         <fieldset class="form-size">
-          <legend>Please pick your color</legend>
+          <legend><b>Please pick your color</b></legend>
           <input id="red" type="radio" name="color" value="red" required />
           <label for="red">Red</label>
 
