--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -28,7 +28,7 @@
         </article>
         <article id="second">
             <h3>Why do developers need Git?</h3>
-            <img src="../IMG/git for dev.jpeg" alt="">
+            <img src="../IMG/git for dev.jpeg" alt="Developers round Git logo">
             <p>
               Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
             </p>
