--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn About Git </title>
+    <title>Learn About Git</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,26 +12,24 @@
         <p>A Developer's Essential Tool</p>
     </header>
 
-    <main>
+    <main class="main">
         <section class="articles">
             <article>
                 <h2>What is Git?</h2>
                 <img class="img" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png">
-                <p> Git is a version control system that helps developers track changes to code, collaborate on projects, and manage different versions of their work. It enables multiple people to work on the same codebase without overwriting each other's work, which is essential for teamwork and maintaining a history of modifications.
-                </p>
+                <p>Git is a version control system that helps developers track changes to code, collaborate on projects, and manage different versions of their work. It enables multiple people to work on the same codebase without overwriting each other's work, which is essential for teamwork and maintaining a history of modifications.</p>
                 <a href="https://www.atlassian.com/git/tutorials/what-is-git" class="read-more">Read More</a>
             </article>
             <article>
-                <h2> Why do developers need Git?</h2>
-                <img class="img" src="https://razorops.com/images/blog/Advantages-of-Git.png" alt="teamwork by 
-                Git">
+                <h2>Why do developers need Git?</h2>
+                <img class="img" src="https://razorops.com/images/blog/Advantages-of-Git.png" alt="teamwork by Git">
                 <p>Developers need Git because it provides essential tools to manage code effectively, especially when working in teams or on complex projects.</p>
                 <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" class="read-more">Read More</a>
             </article>
             <article>
-                <h2> What is a branch in Git?</h2>
+                <h2>What is a branch in Git?</h2>
                 <img class="img" src="https://www.nobledesktop.com/image/blog/git-branches-merge.png" alt="view of Shiraz">
-                <p> A branch in Git is like a separate line of development that allows developers to work on a specific part of a project independently from the main codebase, known as the main or master branch. This feature is essential for collaboration and experimentation.</p>
+                <p>A branch in Git is like a separate line of development that allows developers to work on a specific part of a project independently from the main codebase, known as the main or master branch. This feature is essential for collaboration and experimentation.</p>
                 <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" class="read-more">Read More</a>
             </article>
         </section>
