--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,18 +17,18 @@
   </header>
   <main>
     <div>
-  <form>
+  <form action="/action_page.php">
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
     <h2>Please enter following information</h2>
 
 <form>
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br>
+  <input type="text" pattern="[A-Za-z]{2,}" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname"><br>
+  <input type="text" pattern="[A-Za-z]{2,}" id="lname" name="lname"><br>
   <label for="email">Email:</label><br>
-  <input type="text" id="email" name="email"><br>
+  <input type="email" id="email" name="email"><br>
     <label for="colour">Choose a colour:</label>
     <select id="colour" name="colour">
       <option value="black">Black</option>
@@ -44,12 +44,11 @@
         <option value="XL">XL</option>
         <option value="XXL">XXL</option>
     </select><br><br>
-    <form action="/action_page.php">
       <label for="datemax">Delivery date</label>
-      <input type="date" id="datemax" name="datemax" max="2024-11-14"><br><br>
-      
-      <input type="submit" value="Submit">
+      <input type="date" id="datemax" name="datemax" min= 2024-08-14 max="2024-11-14"><br><br>
     </form>
+      <input type="submit" value="Submit">
+
     
 </form>
   </form>
