--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,46 +18,51 @@
   <main>
     <div class="container">
       <form id="form" class="form">
-        <h2>Please choose the size and color of your  T-shirt</h2>
-        <div class="form-control">
-          <label for="username">User</label>
-          <input type="text" id="username" name="username" placeholder="Enter Username" minlength="2" required />
-        </div>
-        <div class="form-control">
-          <label for="email" class="email">Email</label>
-          <input type="email" id="email" placeholder="Enter your email" pattern="[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*" required />
-        </div>
-        <div class="form-control">
-          <label for="password">Password</label>
-          <input type="password" id="password" placeholder="Enter Password" required />
-        </div>
+          <fieldset class="user-details">
+          <legend><b>Please choose the size and color of your  T-shirt</b></legend>
+          <div class="form-control">
+            <label for="username">User</label>
+            <input type="text" id="username" name="username" placeholder="Enter Username" minlength="2" required />
+          </div>
+          <div class="form-control">
+            <label for="email" class="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" pattern="[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*" required />
+          </div>
+          <div class="form-control">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter Password" required />
+          </div>
+        </fieldset>
         <fieldset class="form-size">
           <legend><b>Please pick your color</b></legend>
+          
           <input id="red" type="radio" name="color" value="red" required />
           <label for="red">Red</label>
 
-          <input id="yellow" type="radio" name="color" value="yellow" />
-          <label for="yellow">Yellow</label>
+          <input id="cyan" type="radio" name="color" value="cyan" />
+          <label for="cyan">Cyan</label>
 
           <input id="blue" type="radio" name="color" value="blue" />
           <label for="blue">Blue</label>
         </fieldset>
-        <div class="dropdown">
-          <label for="size"><b>Please select your size:</b></label>
+        <fieldset class="dropdown">
+          <legend><b>select your size:</b></legend>
+
           <select id="size" name="size" required>
-            <option value="" disabled selected>Here</option>
+            <option value="" disabled selected>size?</option>
             <option value="XS">XS</option>
             <option value="S">S</option>
             <option value="M">M</option>
             <option value="L">L</option>
             <option value="XL">XL</option>
             <option value="XXL">XXL</option>
-          </select>    
-        </div>
-        <div class="form-delivery">
-          <label for="delivery-date"><b>Please select your Delivery Date between the following 4 weeks.</b></label>
+          </select>   
+        </fieldset>
+        <fieldset class="form-delivery">
+          <legend><b>Please select your Delivery Date between the following 4 weeks.</b></legend>
+          <label for="delivery-date"></label>
           <input type="date" id="delivery-date" name="delivery-date" min="2024-11-18" max="2024-12-14">
-        </div>
+        </fieldset>
         <button class="form-btn" type="submit">Submit</button>
       </form>
     </div>
